HelloUltraviolet/Fixtures/RejectedSource/Keys/KeyEscapePrecedence/Expected.uv
//! Expected diagnostic metadata for the KeyEscapePrecedence rejected-source specimen.

expectedDiagnostic("E-CON-0006", "requirement.19.KeyEscapeDiagnosticPrecedence")
